[Fix] Scroll for main pages content, layout issues

--- a/src/shared/components/layout/layout.module.sass
+++ b/src/shared/components/layout/layout.module.sass
@@ -10,3 +10,7 @@
     display: flex
     flex-direction: column
     width: 100%
+
+.main
+    height: 100%
+    overflow: scroll
