--- a/src/shared/styles/globals.sass
+++ b/src/shared/styles/globals.sass
@@ -11,6 +11,7 @@ body
   font-size: ($baseHtmlFs / $browserDefaultFs) * 100%
   font-family: $font
   min-width: fit-content
+  height: 100%
 
 svg, path, rect
 
